# kernel_pwn-by-Rust

./: .gitignore  README.md  decompassion_cpio.sh  gdb配合qemu调试内核.rs  使用fork开启子进程.rs  内联汇编及mmap堆分配.rs  条件竞争 使用了pthread.rs  读取内核符号表获得函数地址.rs
kernel pwn 模版/: __init.sh  parcel.sh  run.sh
kernel pwn 模版/bob/: Cargo.toml  __build.sh
kernel pwn 模版/bob/src/: main.rs
标准Rust kernel pwn模版/: Cargo.toml
标准Rust kernel pwn模版/src/: main.rs
